--- a/config.yml
+++ b/config.yml
@@ -11,4 +11,6 @@ production:
   password: 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
   theme_id: "117136195738"
   store: jackspremium.myshopify.com
+  ignore:
+  - config/settings_data.json
 
