updated icons + nav

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -205,10 +205,10 @@
     "enable_thumbnail_slider": true,
     "quickshop_gallery_position": "left",
     "video_looping": false,
-    "cart_action": "mini_cart",
+    "cart_action": "drawer",
     "show_lock_icon": true,
     "cart_icon": "bag",
-    "display_special_instructions": true,
+    "display_special_instructions": false,
     "display_tos_checkbox": false,
     "tos_page": "",
     "display_savings": true,
@@ -1921,6 +1921,7 @@
               "callout_title": "What should I feed my cat?",
               "callout_subtitle": "Cats are obligate carnivores, meaning they must eat mainly meat and animal organs to thrive.",
               "callout_link_title": "Learn more ➞",
+              "callout_link_url": "",
               "css_class": "",
               "custom_css": ""
             }
@@ -2422,7 +2423,7 @@
           "display_savings": true,
           "display_collections": false,
           "display_type": false,
-          "display_tags": true,
+          "display_tags": false,
           "display_social_buttons": false,
           "product_description_position": "bottom",
           "show_payment_button": false,
